# Production-line-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  Example.md  LICENSE  README.md  Usage.md
Simulation/: API-Dokumentation.md  CMakeLists.txt
Simulation/img/: Paintings.vsdx  ~$$Paintings.~vsdx
Simulation/src/: ArgumentCallbackFunctions.cpp  ArgumentCallbackFunctions.h  CMakeLists.txt  ObjMapper.cpp  ObjMapper.h  apiExample.cpp  main.cpp  main.h  main1.cpp  main2.cpp  version.h
Simulation/src/actuators/: BaseActuator.cpp  BaseActuator.h  CMakeLists.txt  MillAndDriller.cpp  MillAndDriller.h  conveyorbelt.cpp  conveyorbelt.h  directedPusher.cpp  pusher.cpp  pusher.h
Simulation/src/api/: CMakeLists.txt  api.cpp  api.h
Simulation/src/gui/: CMakeLists.txt  GuiActuator.cpp  GuiActuator.h  GuiBox.cpp  GuiBox.h  GuiPlacing.cpp  GuiPlacing.h  GuiSensor.cpp  GuiSensor.h  GuiStation.cpp  GuiStation.h  MainWindow.cpp  MainWindow.h  ObjMapper.cpp  ObjMapper.h
Simulation/src/productionStation/: BaseProductionStation.cpp  BaseProductionStation.h  CMakeLists.txt  MillAndDrillStation.cpp  MillAndDrillStation.h  ProductionStation.cpp  ProductionStation.h  PushStation.cpp  PushStation.h  conveyorbeltStation.cpp  conveyorbeltStation.h
Simulation/src/sensors/: BaseSensor.cpp  BaseSensor.h  CMakeLists.txt  lightBarrier.cpp  lightBarrier.h  pushTaster.cpp
Simulation/src/workpiece/: BaseWorkpiece.cpp  BaseWorkpiece.h  CMakeLists.txt  Placing.cpp  Placing.h
Simulation/tests/: CMakeLists.txt  TEST_TestInit.cpp  TestApi.cpp  Test_BaseWorkStation.cpp  Test_BaseWorkpiece.cpp  Test_ConvexorbeltStation.cpp  Test_GuiPlacing.cpp  Test_LightBarrier.cpp
img/: Paintings.vsdx
src/: ArgumentCallbackFunctions.cpp  CMakeLists.txt  apiExample.cpp  main.cpp  main.h  version.h
src/actuators/: BaseActuator.cpp  MillAndDriller.cpp  conveyorbelt.cpp  conveyorbelt.h  directedPusher.h  pusher.cpp
src/api/: api.cpp  api.h
src/gui/: GuiActuator.cpp  GuiActuator.h  GuiBox.cpp  GuiSensor.cpp  GuiStation.cpp  ObjMapper.cpp  ObjMapper.h
src/productionStation/: BaseProductionStation.cpp  BaseProductionStation.h  CMakeLists.txt  MillAndDrillStation.cpp  PushStation.cpp  PushStation.h  conveyorbeltStation.cpp  conveyorbeltStation.h
src/sensors/: BaseSensor.cpp  BaseSensor.h  CMakeLists.txt  lightBarrier.cpp  pushTaster.cpp  pushTaster.h
src/workpiece/: BaseWorkpiece.cpp  BaseWorkpiece.h  Placing.h
tests/: CMakeLists.txt  Test_BaseWorkStation.cpp  Test_GuiPlacing.cpp  Test_Pusher.cpp
